
********************************Version 1.1************************************************************

1. Subscriber admin page, Check ALL & Uncheck All bug fixed.
2. Updated Help documents.

********************************Version 1.2************************************************************

* Widget translation issue has been fixed
* PHP warning message from Subscribers Export page has been removed.

********************************Version 1.3************************************************************

* Fixed small error on mail compose page.
* Added check for Already Confirmed emails. This is to prevent user clicking optin email link multiple time.

********************************Version 1.4************************************************************

* Scheduled published posts issue has been fixed (From this version onwards, Notification emails will be triggered for scheduled posts)
* Bulk update option for subscribers group in admin view subscribers page.

********************************Version 1.5************************************************************

* Bug fix on admin notification email for new subscribers.

********************************Version 1.6************************************************************

* Bug fix on Send Mail/Notification warning message (i.e Call to undefined method issue has been fixed)
Call to undefined method es_cls_common::es_sent_report_plain() 	- Fixed
Call to undefined method es_cls_common::es_sent_report_html() 	- Fixed

********************************Version 1.7************************************************************

* Bug fixed on individual subscriber delete option.
* Bug fixed on individual subscriber resend confirmation mail option.

********************************Version 1.8************************************************************

* Bug fixed on Double Opt-In welcome mail check (Previously it was not checking admin setting for welcome mail).
* Tested up to WordPress 3.9.2