@@ -116,7 +116,7 @@ class es_cls_common
 		$report = $report. "Unique ID : ###UNIQUE### \n";
 		$report = $report. "Start Time: ###STARTTIME### \n";
 		$report = $report. "End Time: ###ENDTIME### \n";
-		$report = $report. "For more information, Login to your Dashboard and go to Sent Report menu in Email Subscribers. \n\n";
+		$report = $report. "For more information, Login to your Dashboard and go to Sent Mails menu in Email Subscribers. \n\n";
 		$report = $report. "Thank You \n";
 		$report = $report. "www.gopiplus.com \n";
 		return $report;
@@ -130,7 +130,7 @@ class es_cls_common
 		$report = $report. "Unique ID : ###UNIQUE### <br/>";
 		$report = $report. "Start Time: ###STARTTIME### <br/>";
 		$report = $report. "End Time: ###ENDTIME### <br/>";
-		$report = $report. "For more information, Login to your Dashboard and go to Sent Report menu in Email Subscribers. <br/><br/>";
+		$report = $report. "For more information, Login to your Dashboard and go to Sent Mails menu in Email Subscribers. <br/><br/>";
 		$report = $report. "Thank You <br/>";
 		$report = $report. "www.gopiplus.com <br/>";
 		return $report;
